[metadata]
name = volatile
version = 2.1.1.dev1
author = Marc Brinkmann
author_email = git@marcbrinkmann.de
license = MIT
description = A small extension for the tempfile module.
url = https://github.com/mbr/volatile
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3

[options]
packages = find:

[options.packages.find]
ignore =
    tests
